--- a/idc-server/idc-server-status/src/main/profile/prd/server.properties
+++ b/idc-server/idc-server-status/src/main/profile/prd/server.properties
@@ -1,6 +1,6 @@
-ddc.url=jdbc:mysql://m3502i.jxq.db.dmall.com:3502/ddc?useUnicode=true&characterEncoding=UTF-8
+ddc.url=jdbc:mysql://mysql.iwellmass.com:3502/ddc?useUnicode=true&characterEncoding=UTF-8
 ddc.username=ddc
-ddc.password=05ddc^rds#!30
+ddc.password=zjhz2017
 ddc.initialSize=5
 ddc.minIdle=10
 ddc.maxActive=50
