--- a/idc-server/idc-server-status/src/main/profile/prd/quartz.properties
+++ b/idc-server/idc-server-status/src/main/profile/prd/quartz.properties
@@ -31,9 +31,9 @@ org.quartz.jobStore.misfireThreshold=60000
 #============================================================================
 org.quartz.dataSource.ddc.connectionProvider.class=com.alibaba.druid.support.quartz.DruidQuartzConnectionProvider
 org.quartz.dataSource.ddc.driverClassName=com.mysql.jdbc.Driver
-org.quartz.dataSource.ddc.url=jdbc:mysql://m3502i.jxq.db.dmall.com:3502/ddc?useUnicode=true&characterEncoding=UTF-8
+org.quartz.dataSource.ddc.url=jdbc:mysql://mysql.iwellmass.com:3502/ddc?useUnicode=true&characterEncoding=UTF-8
 org.quartz.dataSource.ddc.username=ddc
-org.quartz.dataSource.ddc.password=05ddc^rds#!30
+org.quartz.dataSource.ddc.password=zjhz2017
 org.quartz.dataSource.ddc.initialSize=5
 org.quartz.dataSource.ddc.minIdle=5
 org.quartz.dataSource.ddc.maxActive=50
