--- a/idc-server/pom.xml
+++ b/idc-server/pom.xml
@@ -14,13 +14,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!--maven properties -->
-		<maven.test.skip>true</maven.test.skip>
 		<downloadSources>true</downloadSources>
-		<!-- compiler settings properties -->
-		<java_source_version>1.8</java_source_version>
-		<java_target_version>1.8</java_target_version>
-		<file_encoding>UTF-8</file_encoding>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 
 	<dependencyManagement>
@@ -101,9 +96,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>${java_source_version}</source>
-					<target>${java_target_version}</target>
-					<encoding>${file_encoding}</encoding>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
