--- a/idc-thrift/pom.xml
+++ b/idc-thrift/pom.xml
@@ -56,8 +56,8 @@
 
 	<distributionManagement>
 		<repository>
-			<id>center</id>
-			<url>http://192.168.10.201:8081/repository/maven-private/</url>
+			<id>tencent</id>
+			<url>http://supervise.iwellmass.com:8081/repository/maven-private/</url>
 		</repository>
 	</distributionManagement>
 </project>
