use root as idc db username

--- a/idc-server/idc-server-status/src/main/profile/prd/server.properties
+++ b/idc-server/idc-server-status/src/main/profile/prd/server.properties
@@ -1,5 +1,5 @@
 ddc.url=jdbc:mysql://mysql.iwellmass.com:3502/ddc?useUnicode=true&characterEncoding=UTF-8
-ddc.username=ddc
+ddc.username=root
 ddc.password=zjhz2017
 ddc.initialSize=5
 ddc.minIdle=10
