fix prd profile

--- a/idc-admin/idc-admin-web/src/main/profiles/prd/quartz.properties
+++ b/idc-admin/idc-admin-web/src/main/profiles/prd/quartz.properties
@@ -15,6 +15,7 @@ org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread=true
 #============================================================================
 #Configure JobStore
 #============================================================================
+#org.quartz.jobStore.class=org.quartz.simpl.RAMJobStore
 org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 #设置为true后在jobDataMap中不能传递非String
@@ -27,9 +28,9 @@ org.quartz.jobStore.dataSource=ddc
 #============================================================================
 org.quartz.dataSource.ddc.connectionProvider.class=com.alibaba.druid.support.quartz.DruidQuartzConnectionProvider
 org.quartz.dataSource.ddc.driverClassName=com.mysql.jdbc.Driver
-org.quartz.dataSource.ddc.url=jdbc:mysql://m3502i.jxq.db.dmall.com:3502/ddc?useUnicode=true&characterEncoding=UTF-8
-org.quartz.dataSource.ddc.username=ddc
-org.quartz.dataSource.ddc.password=05ddc^rds#!30
+org.quartz.dataSource.ddc.url=jdbc\:mysql\://localhost\:3306/ddc?useUnicode=true&characterEncoding=UTF-8
+org.quartz.dataSource.ddc.username=root
+org.quartz.dataSource.ddc.password=
 org.quartz.dataSource.ddc.initialSize=2
 org.quartz.dataSource.ddc.minIdle=0
 org.quartz.dataSource.ddc.maxActive=10
