--- a/idc-admin/idc-admin-web/src/main/profiles/prd/ddc-admin.properties
+++ b/idc-admin/idc-admin-web/src/main/profiles/prd/ddc-admin.properties
@@ -1,15 +1,15 @@
-cookie.aes.key=bN7DVjFMJPcoWDcR
-devMode=false
-domain.name=ddc.dmall.com
-erp.domain.name=erp.dmall.com
+cookie.aes.key=i0380w330bwda14m
+domain.name=devddc.dmall.com
+erp.domain.name=deverp.dmall.com
+dubbo.erp.reference.urls=dubbo://192.168.8.232:19821
 
 dubbo.application.name=ddc-admin
 dubbo.application.owner=ming.li
-dubbo.registry.address=zookeeper://192.168.90.148:2181?backup=192.168.90.149:2181,192.168.90.150:2181
+dubbo.registry.address=zookeeper://192.168.8.236:2181?backup=192.168.8.237:2181,192.168.8.238:2181
 
-ddc.admin.user=5226,5207,5330
+ddc.admin.user=65868,1
 
-#线上环境开启DMC监控
-dmc.monitor.enabled=true
+#本地环境关闭DMC监控
+dmc.monitor.enabled=false
 dmc.monitor.projectCode=DDC
 dmc.monitor.appCode=DDC-Admin
