--- a/idc-admin/idc-admin-web/src/main/profiles/prd/ddc-jdbc.properties
+++ b/idc-admin/idc-admin-web/src/main/profiles/prd/ddc-jdbc.properties
@@ -1,3 +1,3 @@
-jdbc_url=jdbc:mysql://m3502i.jxq.db.dmall.com:3502/ddc?useUnicode=true&characterEncoding=UTF-8
-jdbc_username=ddc
-jdbc_password=05ddc^rds#!30
+jdbc_url=jdbc:mysql://mysql.iwellmass.com/ddc?useUnicode=true&characterEncoding=UTF-8
+jdbc_username=root
+jdbc_password=zjhz2017
