--- a/idc-sdk/pom.xml
+++ b/idc-sdk/pom.xml
@@ -15,7 +15,7 @@
 
 	<distributionManagement>
 		<repository>
-			<id>tencent</id>
+			<id>center</id>
 			<url>http://maven.iwellmass.com:8081/repository/maven-private/</url>
 		</repository>
 	</distributionManagement>
