--- a/idc-thrift/pom.xml
+++ b/idc-thrift/pom.xml
@@ -56,7 +56,7 @@
 
 	<distributionManagement>
 		<repository>
-			<id>tencent</id>
+			<id>center</id>
 			<url>http://maven.iwellmass.com:8081/repository/maven-private/</url>
 		</repository>
 	</distributionManagement>
