--- a/idc-admin/idc-admin-service/pom.xml
+++ b/idc-admin/idc-admin-service/pom.xml
@@ -9,6 +9,11 @@
     <artifactId>idc-admin-service</artifactId>
 
     <dependencies>
+            <dependency>
+            <groupId>com.iwellmass</groupId>
+            <artifactId>wac-common</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.iwellmass</groupId>
             <artifactId>idc-admin-dao</artifactId>
