添加任务依赖逻辑

--- a/idc-admin/idc-admin-web/pom.xml
+++ b/idc-admin/idc-admin-web/pom.xml
@@ -24,6 +24,13 @@
 	</dependencyManagement>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.4.6</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
