--- a/idc-admin/idc-admin-service/pom.xml
+++ b/idc-admin/idc-admin-service/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.iwellmass</groupId>
         <artifactId>idc-admin</artifactId>
-        <version>1.0.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
     <artifactId>idc-admin-service</artifactId>
 
