--- a/idc-admin/idc-admin-web/pom.xml
+++ b/idc-admin/idc-admin-web/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.iwellmass</groupId>
 		<artifactId>idc-admin</artifactId>
-		<version>1.0.0</version>
+		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>idc-admin-web</artifactId>
 	<packaging>jar</packaging>
