--- a/idc-admin/pom.xml
+++ b/idc-admin/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.iwellmass</groupId>
 	<artifactId>idc-admin</artifactId>
-	<version>1.0.0</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.iwellmass</groupId>
 			<artifactId>idc-common</artifactId>
-			<version>1.0.0</version>
+			<version>1.2.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
