--- a/idc-common/pom.xml
+++ b/idc-common/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.iwellmass</groupId>
 	<artifactId>idc-common</artifactId>
-	<version>1.0.0</version>
+	<version>1.2.0-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,7 +30,7 @@
 		<dependency>
 			<groupId>com.iwellmass</groupId>
 			<artifactId>idc-thrift</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
