--- a/idc-server/pom.xml
+++ b/idc-server/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>idc-server</artifactId>
 	<packaging>pom</packaging>
 	<name>idc server module</name>
-	<version>1.0.0</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<modules>
 		<module>idc-server-status</module>
 		<module>idc-server-dag</module>
@@ -23,12 +23,12 @@
 			<dependency>
 				<groupId>com.iwellmass</groupId>
 				<artifactId>idc-thrift</artifactId>
-				<version>1.1.0</version>
+				<version>1.2.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.iwellmass</groupId>
 				<artifactId>idc-common</artifactId>
-				<version>1.0.0</version>
+				<version>1.2.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.inject</groupId>
