--- a/idc-admin/idc-admin-web/pom.xml
+++ b/idc-admin/idc-admin-web/pom.xml
@@ -91,6 +91,10 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
