--- a/idc-demo/pom.xml
+++ b/idc-demo/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>com.iwellmass</groupId>
             <artifactId>idc-sdk</artifactId>
-            <version>1.1.0</version>
+            <version>1.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
