--- a/idc-admin/idc-admin-web/Dockerfile
+++ b/idc-admin/idc-admin-web/Dockerfile
@@ -3,8 +3,8 @@ ARG profile
 ENV TZ=Asia/Shanghai
 RUN mkdir /app
 WORKDIR /app
-ADD target/data-factory.zip /app/
+ADD target/idc-admin-web.zip /app/
 ADD hosts-${profile} /app/
 RUN cat hosts-${profile} >> /etc/hosts
-RUN unzip /app/data-factory.zip && rm -f /app/data-factory.zip
-CMD cd /app/data-factory && cat /app/hosts-${profile} >> /etc/hosts && java -cp "./conf:lib/*" com.iwellmass.datafactory.DataFactoryApplication --spring.profiles.active=${profile}
+RUN unzip /app/idc-admin-web.zip && rm -f /app/idc-admin-web.zip
+CMD cd /app/idc-admin-web && cat /app/hosts-${profile} >> /etc/hosts && java -cp "./conf:lib/*" com.iwellmass.idc.IDCApplication  --spring.profiles.active=${profile}
