--- a/idc-admin/idc-admin-web/src/main/resources/application.yml
+++ b/idc-admin/idc-admin-web/src/main/resources/application.yml
@@ -32,7 +32,7 @@ security:
         serviceId: ${PREFIX:}resource
   user:
     password: password
-  ignored: /css/**,/images/**,/js/**,/favicon.ico,/webjars/**,/static/**,*.html,/swagger-resources/**,/v2/api-docs,*.json
+  ignored: /**
 
 feign:
   hystirx:
@@ -53,6 +53,19 @@ mybatis:
   configuration:
     default-fetch-size: 100
     default-statement-timeout: 30
+eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 2
+    status-page-url: http://eureka.iwellmass.com:${server.port}/swagger-ui.html
+    prefer-ip-address: true
+  client:
+    serviceUrl:
+      defaultZone: http://eureka.iwellmass.com:8761/eureka/
+    healthcheck:
+      enabled: true
+    lease:
+      duration: 5
 ---
 spring:
   profiles: dev
