使用域名访问mysql数据库

--- a/idc-server/idc-server-status/src/main/profile/prd/quartz.properties
+++ b/idc-server/idc-server-status/src/main/profile/prd/quartz.properties
@@ -31,7 +31,7 @@ org.quartz.jobStore.misfireThreshold=60000
 #============================================================================
 org.quartz.dataSource.ddc.connectionProvider.class=com.alibaba.druid.support.quartz.DruidQuartzConnectionProvider
 org.quartz.dataSource.ddc.driverClassName=com.mysql.jdbc.Driver
-org.quartz.dataSource.ddc.url=jdbc:mysql://mysql.iwellmass.com:3306/ddc?useUnicode=true&characterEncoding=UTF-8
+org.quartz.dataSource.ddc.url=jdbc:mysql://db.iwellmass.com:3306/ddc?useUnicode=true&characterEncoding=UTF-8
 org.quartz.dataSource.ddc.username=root
 org.quartz.dataSource.ddc.password=zjhz2017
 org.quartz.dataSource.ddc.initialSize=5
