--- a/idc-admin/idc-admin-web/src/main/resources/quartz.properties
+++ b/idc-admin/idc-admin-web/src/main/resources/quartz.properties
@@ -27,7 +27,7 @@ org.quartz.jobStore.dataSource=ddc
 #============================================================================
 org.quartz.dataSource.ddc.connectionProvider.class=com.alibaba.druid.support.quartz.DruidQuartzConnectionProvider
 org.quartz.dataSource.ddc.driverClassName=com.mysql.jdbc.Driver
-org.quartz.dataSource.ddc.url=jdbc:mysql://192.168.10.201:3306/ddc?useUnicode=true&characterEncoding=UTF-8
+org.quartz.dataSource.ddc.url=jdbc:mysql://db.iwellmass.com:3306/ddc?useUnicode=true&characterEncoding=UTF-8
 org.quartz.dataSource.ddc.username=root
 org.quartz.dataSource.ddc.password=zjhz2017
 org.quartz.dataSource.ddc.initialSize=2
