--- a/idc-server/pom.xml
+++ b/idc-server/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -17,6 +18,13 @@
 		<downloadSources>true</downloadSources>
 		<maven.test.skip>true</maven.test.skip>
 	</properties>
+
+	<distributionManagement>
+		<repository>
+			<id>center</id>
+			<url>http://maven.iwellmass.com:8081/repository/maven-private/</url>
+		</repository>
+	</distributionManagement>
 
 	<dependencyManagement>
 		<dependencies>
