--- a/idc-server/src/main/resources/quartz.properties
+++ b/idc-server/src/main/resources/quartz.properties
@@ -20,8 +20,7 @@ org.quartz.dataSource.idc.connectionProvider.class=com.iwellmass.idc.server.quar
 org.quartz.jobStore.dataSource=idc
 org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.tablePrefix=QRTZ_
-org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+org.quartz.jobStore.driverDelegateClass=com.iwellmass.idc.server.quartz.IDCDriverDelegate
 
 # plugin
 org.quartz.plugin.idc.class=com.iwellmass.idc.server.quartz.SpringIDCPluginDelegate
-org.quartz.plugin.idc.delegateClassName=com.iwellmass.idc.server.quartz.IDCPlugin
