--- a/idc-server/src/main/resources/quartz.properties
+++ b/idc-server/src/main/resources/quartz.properties
@@ -14,13 +14,13 @@ org.quartz.threadPool.threadPriority=5
 org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread=true
 
 # datasource
-org.quartz.dataSource.idc.connectionProvider.class=com.iwellmass.idc.server.quartz.SpringConnectionProviderDelegate
+org.quartz.dataSource.idc.connectionProvider.class=com.iwellmass.idc.quartz.SpringConnectionProviderDelegate
 
 # jdbc job store
 org.quartz.jobStore.dataSource=idc
 org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.tablePrefix=QRTZ_
-org.quartz.jobStore.driverDelegateClass=com.iwellmass.idc.server.quartz.IDCDriverDelegate
+org.quartz.jobStore.driverDelegateClass=com.iwellmass.idc.quartz.IDCDriverDelegate
 
 # plugin
-org.quartz.plugin.idc.class=com.iwellmass.idc.server.quartz.SpringIDCPluginDelegate
+org.quartz.plugin.idc.class=com.iwellmass.idc.quartz.SpringIDCPluginDelegate
