--- a/idc-spring-cloud-starter/pom.xml
+++ b/idc-spring-cloud-starter/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.iwellmass</groupId>
-	<artifactId>idc-spring-boot-starter</artifactId>
+	<artifactId>idc-spring-cloud-starter</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<name>idc-spring-boot-starter</name>
 
