--- a/idc-server-spring-cloud-starter/pom.xml
+++ b/idc-server-spring-cloud-starter/pom.xml
@@ -56,9 +56,15 @@
 				<artifactId>jgrapht-core</artifactId>
 				<version>0.9.2</version>
 			</dependency>
+
+			<dependency>
+				<groupId>com.netflix.feign</groupId>
+				<artifactId>feign-core</artifactId>
+				<version>8.18.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.persistence</groupId>
@@ -103,11 +109,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.netflix.feign</groupId>
-			<artifactId>feign-httpclient</artifactId>
+			<artifactId>feign-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.netflix.feign</groupId>
-			<artifactId>feign-slf4j</artifactId>
+			<artifactId>feign-httpclient</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
