--- a/idc-server-spring-cloud-starter/pom.xml
+++ b/idc-server-spring-cloud-starter/pom.xml
@@ -89,7 +89,18 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hibernate</groupId>
+					<artifactId>hibernate-entitymanager</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
+
 		<!-- cloud -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
