--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -47,8 +47,9 @@ security:
         serviceId: ${PREFIX:}resource
   user:
     password: password
-  ignored: /css/**,/images/**,/js/**,/favicon.ico,/webjars/**,/static/**,*.html,/swagger-resources/**,/v2/api-docs,*.json
+  ignored: /** #/css/**,/images/**,/js/**,/favicon.ico,/webjars/**,/static/**,*.html,/swagger-resources/**,/v2/api-docs,*.json
 
+spring.jpa.hibernate.ddl-auto: update
 
 feign:
   hystirx:
