--- a/idc-app/pom.xml
+++ b/idc-app/pom.xml
@@ -2,77 +2,22 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.iwellmass</groupId>
+
+	<parent>
+		<groupId>com.iwellmass</groupId>
+		<artifactId>idc-parent</artifactId>
+		<version>2.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
+
 	<artifactId>idc-app</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
-
-	<build>
-		<finalName>${project.name}</finalName>
-		<plugins>
-			<!---assembly打包插件 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<descriptors>
-						<descriptor>assembly.xml</descriptor>
-					</descriptors>
-					<appendAssemblyId>false</appendAssemblyId>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-
-	<dependencyManagement>
-		<dependencies>
-			<!-- wac-model -->
-			<dependency>
-				<groupId>com.iwellmass</groupId>
-				<artifactId>idc-server-spring-cloud-starter</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.iwellmass</groupId>
-				<artifactId>wac-common</artifactId>
-				<version>2.0-SNAPSHOT</version>
-			</dependency>
-			<dependency>
-				<groupId>com.iwellmass</groupId>
-				<artifactId>wac-auth</artifactId>
-				<version>2.0-SNAPSHOT</version>
-			</dependency>
-			<!-- 3rd -->
-			<dependency>
-				<groupId>com.iwellmass</groupId>
-				<artifactId>iwellmass-dependencies</artifactId>
-				<version>2.0-SNAPSHOT</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<dependencies>
 		<!-- wac -->
 		<dependency>
 			<groupId>com.iwellmass</groupId>
 			<artifactId>idc-server-spring-cloud-starter</artifactId>
+			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.hibernate</groupId>
@@ -91,4 +36,35 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>prd</id>
+			<build>
+				<finalName>${project.name}</finalName>
+				<plugins>
+					<!---assembly打包插件 -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>2.6</version>
+						<configuration>
+							<descriptors>
+								<descriptor>assembly.xml</descriptor>
+							</descriptors>
+							<appendAssemblyId>false</appendAssemblyId>
+						</configuration>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
