--- a/idc-demo/pom.xml
+++ b/idc-demo/pom.xml
@@ -2,54 +2,25 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
+	<parent>
+		<groupId>com.iwellmass</groupId>
+		<artifactId>idc-parent</artifactId>
+		<version>2.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
-	<groupId>com.iwellmass</groupId>
 	<artifactId>idc-demo</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>idc-demo</name>
-	<url>http://maven.apache.org</url>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
-
-
-	<distributionManagement>
-		<repository>
-			<id>center</id>
-			<url>http://maven.iwellmass.com:8081/repository/maven-private/</url>
-		</repository>
-	</distributionManagement>
-
-	<dependencyManagement>
-		<dependencies>
-			<!-- 3rd -->
-			<dependency>
-				<groupId>com.iwellmass</groupId>
-				<artifactId>iwellmass-dependencies</artifactId>
-				<version>2.0-SNAPSHOT</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-
-			<!-- wac-idc -->
-			<dependency>
-				<groupId>com.iwellmass</groupId>
-				<artifactId>idc-client-spring-cloud-starter</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<dependencies>
 		<!-- wac -->
 		<dependency>
 			<groupId>com.iwellmass</groupId>
 			<artifactId>idc-client-spring-cloud-starter</artifactId>
+			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.data</groupId>
