--- a/idc-client-spring-cloud-starter/pom.xml
+++ b/idc-client-spring-cloud-starter/pom.xml
@@ -39,6 +39,10 @@
 			<groupId>com.netflix.feign</groupId>
 			<artifactId>feign-httpclient</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.netflix.feign</groupId>
+			<artifactId>feign-slf4j</artifactId>
+		</dependency>
 
 		<!-- test -->
 		<dependency>
