--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -14,7 +14,7 @@ server:
   port: 9306
 
 spring.jpa.hibernate.ddl-auto: update
-spring.jpa.show-sql: true
+# spring.jpa.show-sql: true
 
 supervise:
   client:
