--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
 server:
   port: 9306
 
+spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # spring.jpa.hibernate.ddl-auto: update
 # spring.jpa.show-sql: true
 
