添加 JobRuntime 信息

--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -6,10 +6,9 @@ spring:
       WRITE_DATES_AS_TIMESTAMPS: false
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://db.iwellmass.com:3306/idc?characterEncoding=utf8
+    url: jdbc:mysql://austin.realhyx.com:3306/test?characterEncoding=utf8
     username: root
-    password: zjhz2017
-    
+    password: 000000oO)
 server:
   port: 9306
 
