--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -17,6 +17,17 @@ spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.P
 # spring.jpa.hibernate.ddl-auto: update
 # spring.jpa.show-sql: true
 
+mybatis:
+  mapper-locations: /mapper/**
+  type-aliases-package: com.iwellmass.idc.app.model
+  type-handlers-packages: com.iwellmass.idc.app.typehandler
+#  type-handlers-package: com.realhyx.simple.mybatis.config
+  configuration:
+    map-underscore-to-camel-case: true
+    default-fetch-size: 100
+    default-statement-timeout: 30
+
+
 supervise:
   client:
     clientId: acme
