--- a/idc-core/pom.xml
+++ b/idc-core/pom.xml
@@ -61,5 +61,11 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.iwellmass</groupId>
+            <artifactId>idc-app</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
