--- a/idc-app/pom.xml
+++ b/idc-app/pom.xml
@@ -181,6 +181,12 @@
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter-test</artifactId>
 		</dependency>
+		
+		<dependency>
+    <groupId>com.github.pagehelper</groupId>
+    <artifactId>pagehelper-spring-boot-starter</artifactId>
+    <version>1.2.10</version>
+</dependency>
 	</dependencies>
 
 
