--- a/idc-app/pom.xml
+++ b/idc-app/pom.xml
@@ -60,6 +60,12 @@
 			<artifactId>mybatis-spring-boot-starter-test</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		
+				<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.10</version>
+		</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -185,7 +191,6 @@
 		<dependency>
     <groupId>com.github.pagehelper</groupId>
     <artifactId>pagehelper-spring-boot-starter</artifactId>
-    <version>1.2.10</version>
 </dependency>
 	</dependencies>
 
