--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
       WRITE_DATES_AS_TIMESTAMPS: false
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://db.iwellmass.com:3306/idc?characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/loc_idc?characterEncoding=utf8
     username: root
-    password: zjhz2017
+    password: cx19970522
     
 server:
   port: 9306
