--- a/idc-app/pom.xml
+++ b/idc-app/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.iwellmass</groupId>
 		<artifactId>idc-parent</artifactId>
-		<version>2.1.1-SNAPSHOT</version>
+		<version>2.1.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -192,7 +192,7 @@
 		<profile>
 			<id>prd</id>
 			<build>
-				<finalName>${project.name}</finalName>
+				<finalName>${project.name}-${project.version}</finalName>
 				<plugins>
 					<!---assembly打包插件 -->
 					<plugin>
