--- a/idc-scheduler/pom.xml
+++ b/idc-scheduler/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.iwellmass</groupId>
 		<artifactId>idc-parent</artifactId>
-		<version>2.1.1-SNAPSHOT</version>
+		<version>2.1.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
