--- a/idc-app/pom.xml
+++ b/idc-app/pom.xml
@@ -103,6 +103,11 @@
 			<groupId>junit</groupId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
