update:modify reTaskVo for complete reschedule interface

--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -100,7 +100,7 @@ eureka:
       enabled: true
     lease:
       duration: 5
-    register-with-eureka: false
+    register-with-eureka: true
 
 ---
 spring:
