open server idc but don't open scheduler

--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -102,7 +102,7 @@ eureka:
       duration: 5
     register-with-eureka: true
 
-idc.scheduler.start-auto: true
+idc.scheduler.start-auto: false
 
 ---
 spring:
