--- a/idc-app/pom.xml
+++ b/idc-app/pom.xml
@@ -39,7 +39,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+		<dependency>
+			<groupId>com.iwellmass</groupId>
+			<artifactId>data-factory-api</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>javax.persistence-api</artifactId>
